--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express-jwt": "^8.5.1",
     "express-rate-limit": "^7.5.0",
     "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.16.0",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
