--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,7 @@ MONGODB_URI=mongodb+srv://username:password@cluster.mongodb.net/marketmirror
 # API Configuration
 OPENAI_API_KEY=your_openai_api_key
 ENABLE_CACHING=true
+MOCK_API_CALLS=false   # Set to 'true' for testing without real API calls
 
 # Admin Authentication
 JWT_SECRET=your-secure-jwt-secret
