--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,10 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "lint": "node --check server.js",
+    "build": "node --check server.js",
+    "test": "node -e \"console.log('No backend test suite is configured yet.')\""
   },
   "dependencies": {
     "axios": "^1.9.0",
