--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "build": "vite build",
     "build:dev": "vite build --mode development",
     "lint": "eslint .",
+    "test": "node -e \"console.log('No frontend test suite is configured yet.')\"",
     "preview": "vite preview"
   },
   "dependencies": {
